tests/sksl/errors/Ossfuzz38108.glsl
### Compilation failed:

error: 1: symbol 'a' was already defined
1 error
